# dragonfly_gen

./: .gitignore  README.md
dragonfly_gen/config/: config_603.ini  config_680.ini  config_701.ini  config_803.ini  config_901.ini  config_991.ini
dragonfly_gen/drugtargetgraph/: utils.py
dragonfly_gen/drugtargetgraph/data/: pdb_atom_dict.pt  pdb_res_dict.pt  selfies_vocab.pt
dragonfly_gen/genfromligand/: net.py  sampling.py
dragonfly_gen/genfromligand/output/: rosiglitazone.csv  rosiglitazone_cats.csv  rosiglitazone_cats_novelty.csv  rosiglitazone_smiles_only.csv
dragonfly_gen/genfromstructure/: net.py  preprocesspdb.py  sampling.py
dragonfly_gen/genfromstructure/input/: 3g8i_ligand.sdf
dragonfly_gen/genfromstructure/output/: 3g8i.csv  3g8i_smiles_only.csv
dragonfly_gen/gml/: pygdataset.py  pygmt.py
dragonfly_gen/ranking/novelty/: nov_score.py
dragonfly_gen/ranking/qsar/: cats2d.py  cats_similarity_ranking.py
envs/: environment.yml  pyproject.toml  test_pyg.py
