[tool.poetry]
name = "dragonfly"
version = "0.1.0"
description = "De novo design with dragonfly"
authors = ["Kenneth Atz <kenatz@ethz.ch>",]
license = "See License file"
readme = "../README.md"

homepage = "https://github.com/atzkenneth/dragonfly_gen"
repository = "https://github.com/atzkenneth/dragonfly_gen"
documentation = "https://github.com/atzkenneth/dragonfly_gen"

[tool.poetry.dependencies]
# pip packages
python = "~3.8"
click = "~8"
"ruamel.yaml" = "~0.16"
pyarrow = "~3.0"
tqdm = "~4"
h5py = "~3.7"
lightgbm = "~3.1"
pyopenssl = "20.0.0" 
pandas = "^1.3"
rdkit = "^2022.9"
XlsxWriter = "^3.1.2"
openpyxl = "^3.1.2"
networkx = "^3.1"
einops = "^0.6.1"

[tool.poetry.dev-dependencies]
# notebooks
ipykernel = "^5.5"
ipython_genutils = "^0.2"
matplotlib = "~3.4"
# testing
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
# formatting, linting, etc
black = "^22.6.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
yamllint = "^1.27.1"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############
# Other tools #
###############

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
